WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27277
[V8] Fix isolated world wrappers for Node prototypes
https://bugs.webkit.org/show_bug.cgi?id=27277
Summary
[V8] Fix isolated world wrappers for Node prototypes
Adam Barth
Reported
2009-07-14 15:38:12 PDT
The next step is to fix the prototype chains for node prototypes in isolated worlds. Patch forthcoming.
Attachments
patch
(5.94 KB, patch)
2009-07-14 15:48 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
patch
(5.96 KB, patch)
2009-07-14 15:54 PDT
,
Adam Barth
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-07-14 15:48:59 PDT
Created
attachment 32740
[details]
patch Sorry for the goofy diff format. I'm working out of an improvised git repo in my Chromium tree.
Adam Barth
Comment 2
2009-07-14 15:54:02 PDT
Created
attachment 32741
[details]
patch Oops. The previous version was slightly old.
Dimitri Glazkov (Google)
Comment 3
2009-07-14 15:56:26 PDT
Comment on
attachment 32741
[details]
patch sounds good.
David Levin
Comment 4
2009-07-14 16:00:29 PDT
static v8::Handle<v8::Context> V8DOMWrapper::getWrapperContext(Frame* frame); Not: Remove the param name "frame".
Adam Barth
Comment 5
2009-07-14 16:06:23 PDT
Assigning to myself for landing.
Adam Barth
Comment 6
2009-07-14 17:11:10 PDT
Sending WebCore/ChangeLog Sending WebCore/bindings/v8/V8DOMWrapper.cpp Sending WebCore/bindings/v8/V8DOMWrapper.h Transmitting file data ... Committed revision 45884.
Dimitri Glazkov (Google)
Comment 7
2009-07-15 09:28:08 PDT
Fix landed as
http://trac.webkit.org/changeset/45916
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug